kubernetes/portfolio/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: portfolio-service
  labels:
    name: portfolio-service
